--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2261,7 +2261,7 @@
     input[type="date"],
 	select,
 	textarea {
-		background: rgba(144, 144, 144, 0.075);
+		background: rgba(255, 255, 255, 0.5);
 		border-color: rgba(144, 144, 144, 0.25);
 	}
 
@@ -2303,24 +2303,28 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: #999 !important;
+		color: #666 !important;
 	}
 
 	:-moz-placeholder {
-		color: #999 !important;
+		color: #666 !important;
 	}
 
 	::-moz-placeholder {
-		color: #999 !important;
+		color: #666 !important;
 	}
 
 	:-ms-input-placeholder {
-		color: #999 !important;
+		color: #666 !important;
 	}
 
 	.formerize-placeholder {
-		color: #999 !important;
+		color: #666 !important;
 	}
+
+    input#date {
+        color:#656565;
+    }
 
 /* Icon */
 
@@ -3080,7 +3084,12 @@
 			}
 
 		@media screen and (max-width: 736px) {
-
+            
+            #main > .inner {
+                width: 100%;
+                max-width: 100%;
+	        }
+            
 			.wrapper > header {
 				padding: 1.5rem;
 			}
@@ -3967,13 +3976,20 @@ nav {
   transition: transform 0.5s cubic-bezier(0.3, 1.4, 0.5, 0.9);
     z-index: 999;
     transition-timing-function: ease;
+    pointer-events: none;
 }
 nav.open {
-  transform: translate3d(0, 0, 0);
+  transform: translate3d(-25px, 10px, 0);
 }
 nav.top-right {
   top: -260px;
   right: -260px;
+}
+
+@media screen and (max-width: 736px) {
+    nav.top-right {
+  right: -300px;
+}
 }
 
 .disc {
@@ -4901,13 +4917,13 @@ h4#signatura{
 }
 
 .section-services .single-service#repo{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(/images/weddings/brautpaar-standesamt-mellrichstadt-seifenblasen.webp);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(../../images/weddings/brautpaar-standesamt-mellrichstadt-seifenblasen.webp);
 }
 .section-services .single-service#elop{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(/images/weddings/farbenfroher-brautstrauss.webp);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(../../images/weddings/farbenfroher-brautstrauss.webp);
 }
 .section-services .single-service#enga{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(/images/weddings/sektglas-braut-ehering-im-fokus.webp);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(../../images/engagement-shooting-ring.webp);
 }
 
 .section-services .single-service .content {
@@ -5014,4 +5030,11 @@ h4#signatura{
 
 .section-services .single-service:hover a:after {
 	background-color: #fff;
+}
+
+section #kontakt > .content{
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),url(../../images/unterschrift-im-standesamt.webp);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
